[gd_scene load_steps=3 format=3 uid="uid://c678r78tkkwqq"]

[ext_resource type="Script" uid="uid://c0gi0c1oue4la" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="AudioStream" uid="uid://exp242e3hiam" path="res://2D Gore UI/laugh.mp3" id="2_7vrkn"]

[node name="main menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "SCARY PONG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "PLAY"

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="h2p" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "HOW TO PLAY"

[node name="Control4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "CREDITS"

[node name="Control3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="EXIT" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "EXIT"

[node name="credits_container" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="title" type="Label" parent="credits_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "SCARY PONG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="credits_container"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Label" type="Label" parent="credits_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Sprites - Max Parata (CC0)
Background - Thriller (1983)
Music - M. Jackson (1983)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="credits_container"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="back" type="Button" parent="credits_container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "BACK"

[node name="h2p" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="title" type="Label" parent="h2p"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "SCARY PONG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="h2p"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Label" type="Label" parent="h2p"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Zombie - W / S
Skeleton - Up / Down arrows"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="h2p"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="back_h2p" type="Button" parent="h2p"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "BACK"

[node name="play_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_7vrkn")
volume_db = -3.0

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/h2p" to="." method="_on_h_2p_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/EXIT" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="credits_container/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="h2p/back_h2p" to="." method="_on_back_h_2p_pressed"]
[connection signal="finished" from="play_sound" to="." method="_on_play_sound_finished"]
